i fixed some wrongs

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
             </div>
         </div>
     </div>
+    <!------- End-main-container  ------->
+
+    <!------- Footer-container  ------->
     <footer>
         <div class="footer-section">
             <span>
@@ -194,6 +197,7 @@
             </div>
         </div>
     </footer>
+    <!------- End-footer-container ------->
 </body>
 
 </html>
